[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.RespondToALawsuit"
version = "1.2.2"
description = "Respond to a lawsuit"
readme = "README.md"
authors = [
    { name = "Matt Newsted", email = "mnewsted@illinoislegalaid.org" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://www.illinoislegalaid.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
